--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, nisi repudiandae quasi voluptates animi cum provident fuga unde ut, quae labore aspernatur, sequi voluptatum? Eligendi possimus id praesentium iusto accusantium?</p>
+    </div>
 </body>
 </html>
