my third commit

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, nisi repudiandae quasi voluptates animi cum provident fuga unde ut, quae labore aspernatur, sequi voluptatum? Eligendi possimus id praesentium iusto accusantium?</p>
     </div>
+    <div>
+      <ol>
+        <li><h2>to push new file in git hub</h2></li>
+        <li>git add .</li>
+        <li>git commit -m"meningful message" </li>
+        <li>git push</li>
+      </ol>
+    </div>
 </body>
 </html>
